Fix article floating nav break at 1024px

--- a/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/src/styles/_articles.scss
+++ b/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/src/styles/_articles.scss
@@ -335,7 +335,7 @@
     }
   }
   .article-content {
-    @include desktop-small {
+    @media all and (min-width: 1024px) {
       margin-right: 25%;
     }
     h3 {
