--- a/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/styles/rhd.css
+++ b/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/styles/rhd.css
@@ -10895,7 +10895,7 @@ body.microsite-multi-page nav.top-bar, body.microsite nav.top-bar {
         #rhd-article .field--name-field-article-highlights .article-highlight {
           font-size: 24px;
           line-height: 34px; } }
-  @media (min-width: 1024px) {
+  @media all and (min-width: 1024px) {
     #rhd-article .article-content {
       margin-right: 25%; } }
   #rhd-article .article-content h3 {
